<resources>
    <string name="app_name">摩信</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="language_key" translatable="false">language_key</string>
    <string name="chain_name_key" translatable="false">chain_name_key></string>
    <string name="test_version_key" translatable="false">test_version_key</string>
    <string name="mac_address" translatable="false">mac_address</string>
    <string name="acount_key" translatable="false">account_key</string>
    <string name="password_key" translatable="false">password_key</string>
    <string name="token_key" translatable="false">token_key</string>
    <string name="user_id_key" translatable="false">user_id_key</string>
    <string name="user_sign_key" translatable="false">user_sign_key</string>
    <string name="school_id_key" translatable="false">school_id_key</string>
    <string name="db_id_key" translatable="false">db_id_key</string>
    <string name="notice_time_key" translatable="false">notice_time_key</string>
    <string name="notice_start_time_key" translatable="false">notice_start_time_key</string>
    <string name="is_first_login_key" translatable="false">is_first_login_key</string>
    <string name="is_need_refresh_key" translatable="false">is_need_refresh_key</string>
    <string name="is_select_group_person" translatable="false">is_select_group_person</string>
    <string name="time_notice" translatable="false">time_notice</string>
    <string name="receive_notice" translatable="false">receive_notice</string>
    <string name="receive_sound" translatable="false">receive_sound</string>
    <string name="show_notice" translatable="false">show_notice</string>
    <string name="account_type" translatable="false">account_type</string>
    <string name="user_photo" translatable="false">user_photo</string>
    <string name="loading">正在加载...</string>
    <string name="loading2">请求数据中</string>
    <string name="network_busy">网络不给力...</string>
    <string name="form_qr1">从相册选择</string>
    <string name="reload">点击重试</string>
    <string name="net_error">网络不给力</string>
    <string name="no_dapp">目前还没有DApp信息</string>
    <string name="nodata">暂无数据</string>
    <string name="create_transaction_fail">交易生成失败</string>
    <string name="head_skip">跳过</string>
    <string name="chat_top">置顶聊天</string>
    <string name="chat_delete">删除聊天</string>
    <string name="quit_chat_top">取消置顶</string>
    <string name="moxinAccount">用户名</string>
    <string name="password">密码</string>
    <string name="profile">我</string>
    <string name="id">账号：%1$s</string>
    <string name="modify_user_icon">修改头像</string>
    <string name="modify_nick_name">修改昵称</string>
    <string name="modify_signature">修改个性签名</string>
    <string name="add_rule">加我为好友时</string>
    <string name="allow_type_allow_any">允许任何人</string>
    <string name="allow_type_deny_any">拒绝任何人</string>
    <string name="allow_type_need_confirm">需要验证</string>
    <string name="exit">退出登录</string>
    <string name="about_im">关于即时通信IM</string>
    <string name="tab_contact_tab_text">通讯录</string>
    <string name="tab_conversation_tab_text">消息</string>
    <string name="tab_profile_tab_text">我</string>
    <string name="add_friend">添加好友</string>
    <string name="add_group">添加群聊</string>
    <string name="start_conversation">发起会话</string>
    <string name="create_group_chat">发起群聊</string>
    <string name="create_chat_room">创建聊天室</string>
    <string name="create_private_group">创建讨论组</string>
    <string name="hint_add_user_id">请输入ID</string>
    <string name="hint_add_wording">请输入验证消息</string>
    <string name="contact_add">添加</string>
    <string name="user_id">对方ID</string>
    <string name="add_wording">验证消息</string>
    <string name="scan">扫一扫</string>
    <string name="tips_empty_group_member">请选择群成员</string>
    <string name="tips_empty_group_type">请选择加群方式</string>
    <string name="no_friend_apply">暂无好友申请</string>
    <string name="request_agree">同意</string>
    <string name="request_accepted">已接受</string>
    <string name="request_waiting">等待验证</string>
    <string name="test_custom_action">自定义消息</string>
    <string name="test_custom_message">查看详情>></string>
    <string name="video_call">视频通话</string>
    <string name="audio_call">音频通话</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_moxin">登录摩信</string>
    <string name="login_count_type">请使用摩信账号登录</string>
    <string name="input_phone">请输入绑定的手机号/账号</string>
    <string name="login">登录</string>
    <string name="input_password">请输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="verification_code_login">手机验证码登录</string>
    <string name="third_login">第三方登录</string>
    <string name="send_code">发送验证码</string>
    <string name="count_passwrod_login">账号密码登录</string>
    <string name="input_code">输入验证码</string>
    <string name="phone">手机号</string>
    <string name="retrieve">秒后可重新获取</string>
    <string name="retrieve_code">重新获取验证码</string>
    <string name="code_phone">%1$s %2$s</string>
    <string name="code_have_send_phone">验证码已发送至 +86&#160;</string>
    <string name="code_have_send_email">验证码已发送至邮箱&#160;</string>
    <string name="phone_format_error">手机格式错误</string>
    <string name="use_binding_email_change">请使用账号绑定的邮箱验证修改</string>
    <string name="phone_find_back">手机号验证码找回</string>
    <string name="email_format_error">邮箱格式错误</string>
    <string name="use_binding_phone_change">请使用账号绑定的手机号验证修改</string>
    <string name="email_find_back">邮箱验证码找回</string>
    <string name="input_bind_phone">请输入绑定的手机号</string>
    <string name="input_bind_email">请输入绑定的邮箱</string>
    <string name="sure">确定</string>
    <string name="password_rule">密码需6-30位，且至少包含小写字母、大写字母、数字、符号中的2种</string>
    <string name="password_format_error">密码格式错误</string>
    <string name="bind_no_account">如果没有账号请联系学校管理员获取</string>
    <string name="input_count_phone">请输入账号/手机号</string>
    <string name="bind">绑定</string>
    <string name="bind_moxin_account">绑定摩信账号</string>
    <string name="select_account">检测到当前账号关联多个身份，请选择登录 登录后，可点击“头像”切换身份</string>
    <string name="select_user">选择用户</string>
    <string name="select_count_note">检测到当前账号关联多个账号，请选择需要修改密码的账号</string>
    <string name="all_select">全选</string>
    <string name="select_account2">选择账号</string>
    <string name="authentication">身份验证</string>
    <string name="authentication_note">请输入您的真实姓名，验证登录身份</string>
    <string name="input_true_name">请输入您的真实姓名</string>
    <string name="auto_jump">正在自动跳转…</string>
    <string name="cancle">取消</string>
    <string name="call">拨打</string>
    <string name="call_service_phone">拨打客服电话</string>
    <string name="validate_code_error">验证码填写错误</string>
    <string name="sending">发送中...</string>
    <string name="customer">客服</string>
    <string name="set_new_password">请设置新密码</string>
    <string name="logining">登录中...</string>
    <string name="select_identity">选择身份</string>
    <string name="net_busy">网络繁忙</string>
    <string name="jumping">正在跳转...</string>
    <string name="no_open">该功能暂未开放</string>
    <string name="teach_and_learn">教与学</string>
    <string name="message">消息</string>
    <string name="classes">班级</string>
    <string name="wait_dealt">待办</string>
    <string name="input_state">请输入你的状态…</string>
    <string name="my_card">我的名片</string>
    <string name="online_service">在线客服</string>
    <string name="exchange_user">切换用户</string>
    <string name="set">设置</string>
    <string name="head">头像</string>
    <string name="card">名片</string>
    <string name="name">姓名</string>
    <string name="phone2">手机</string>
    <string name="moxin_account">摩信号</string>
    <string name="email">邮箱</string>
    <string name="code_card">二维码名片</string>
    <string name="more">更多</string>
    <string name="me_information">个人信息</string>
    <string name="no_binding">未绑定</string>
    <string name="your_phone_number">你的手机号是：</string>
    <string name="exchange_phone">更换手机号</string>
    <string name="eexchange_phone_note">更换手机号后，登录手机号和通讯录号码均改变</string>
    <string name="department">部门</string>
    <string name="station">岗位</string>
    <string name="binding_phone">绑定手机号</string>
    <string name="input_your_status">请输入您的状态</string>
    <string name="history">历史状态记录</string>
    <string name="status">状态</string>
    <string name="save">保存</string>
    <string name="collection">收藏</string>
    <string name="exchagne_user">切换用户</string>
    <string name="exchange_user_activity">切换用户后，下次登录默认为选中用户</string>
    <string name="account_and_safe">账号和安全</string>
    <string name="new_remind">新消息提醒</string>
    <string name="privacy">隐私</string>
    <string name="currency">通用</string>
    <string name="about_moxin">关于摩信</string>
    <string name="login_out">退出登录</string>
    <string name="watch_big_pic">查看大图</string>
    <string name="take_pic">拍摄</string>
    <string name="insufficient_permission">权限不足</string>
    <string name="save_success">保存成功</string>
    <string name="save_error">保存失败</string>
    <string name="suspension_notice">暂停通知</string>
    <string name="recovery_notice">恢复通知</string>
    <string name="notice_count_down_time">通知暂停时间还有%1$s</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>
    <string name="stop_notice">暂停通知</string>
    <string name="thirty_minutes">30分钟</string>
    <string name="one_hours">1小时</string>
    <string name="two_hours">2小时</string>
    <string name="four_hours">4小时</string>
    <string name="no_notice_mode">勿扰模式</string>
    <string name="stop_service">内暂停通知</string>
    <string name="details">详情</string>
    <string name="search">搜索</string>
    <string name="link">链接</string>
    <string name="picture">图片</string>
    <string name="voice">语音</string>
    <string name="file">文件</string>
    <string name="video">视频</string>
    <string name="transmit">转发</string>
    <string name="delete">删除</string>
    <string name="sure_delet">确认删除</string>
    <string name="password_set">密码设置</string>
    <string name="account_manager">账号管理</string>
    <string name="login_device_manage">登录设备管理</string>
    <string name="clear_account">注销账号</string>
    <string name="account_and_security">账号和安全</string>
    <string name="account_manage">账号管理</string>
    <string name="wechat">微信</string>
    <string name="input_old_password">请输入原密码</string>
    <string name="set_password">设置密码</string>
    <string name="error_password">密码错误</string>
    <string name="error_new_password">新密码格式错误</string>
    <string name="now_device">当前登录设备</string>
    <string name="local">本机</string>
    <string name="written_off">注销</string>
    <string name="sure_write_off">确认注销</string>
    <string name="receive_new_message">接收新消息通知</string>
    <string name="receive_video_voice_notice">接收语音和视频通话邀请通知</string>
    <string name="notice2">关闭后，聊天新消息将不再显示发送任何消息内容</string>
    <string name="voice_shock">声音与震动</string>
    <string name="notice_switch">通知开关</string>
    <string name="notice3">通知显示消息详情</string>
    <string name="notice4">新消息系统通知</string>
    <string name="largest">最大</string>
    <string name="large">大</string>
    <string name="standard">标准</string>
    <string name="small">小</string>
    <string name="only_wifi">仅Wi-Fi网络</string>
    <string name="never">从不</string>
    <string name="cancel">取消</string>
    <string name="web_maxtime_record">录音时长最多10分钟</string>
    <string name="web_add_audio">添加音频</string>
    <string name="web_start_record">点击开始录音</string>
    <string name="web_rerecord">重录</string>
    <string name="web_add_video">添加视频</string>
</resources>