<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_dialog"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_dialog_list_first"
            style="@style/text16_2A"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/bottom_sure_select"
            android:gravity="center"
            android:text="@string/only_wifi" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_half_1"
            android:background="@color/gray_F6" />

        <TextView
            android:id="@+id/tv_dialog_list_second"
            style="@style/text16_2A"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/press_select"
            android:gravity="center"
            android:text="@string/never" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_10"
            android:background="@color/gray_F6" />

        <TextView
            android:id="@+id/tv_dialog_list_cancel"
            style="@style/text16_2A"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/bottom_cancle"
            android:gravity="center"
            android:text="@string/cancel" />
    </LinearLayout>
</RelativeLayout>