<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_dialog"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_select_pic_watch_big"
            style="@style/text16_2A"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/bottom_sure_select"
            android:gravity="center"
            android:text="@string/watch_big_pic" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_F6" />

        <TextView
            android:id="@+id/tv_select_pic_take_pic"
            style="@style/text16_2A"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/bottom_cancle"
            android:gravity="center"
            android:text="@string/take_pic" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_F6" />


        <TextView
            android:id="@+id/tv_select_pic_from_album"
            style="@style/text16_2A"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/bottom_cancle"
            android:gravity="center"
            android:text="从手机相册选择" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/gray_F6" />

        <TextView
            android:id="@+id/tv_select_pic_cancel"
            style="@style/text16_2A"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/bottom_cancle"
            android:gravity="center"
            android:text="@string/cancel" />
    </LinearLayout>
</RelativeLayout>