<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_white_10"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/call_service_phone"
            android:textColor="@color/black_2A"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_dialog_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:textColor="@color/black_2A" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_12"
            android:layout_marginBottom="@dimen/dp_12"
            android:orientation="horizontal">

            <Button
                android:id="@+id/tv_dialog_phone_cancel"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_30"
                android:background="@color/transparent"
                android:gravity="center"
                android:text="@string/cancle"
                android:textColor="@color/gray_5F"
                android:textSize="@dimen/sp_14"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/tv_dialog_phone_sure"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_30"
                android:background="@color/transparent"
                android:text="@string/call"
                android:textColor="@color/yellow_CC"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
