<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SurfaceView
        android:id="@+id/videorecord_sufaceview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="26dp">

        <ImageView
            android:id="@+id/videorecord_record_img"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_centerInParent="true"
            android:src="@drawable/icon_startrecord" />

        <TextView
            android:id="@+id/videorecord_cancle_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="65dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/videorecord_add_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="42dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_add_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/web_add_video"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/videorecord_time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_2A"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/icon_red_point" />

            <TextView
                android:id="@+id/videorecord_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="00:00"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/videorecord_cancle_img"
        android:layout_width="21dp"
        android:layout_height="21dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/icon_back"
        android:visibility="gone" />

    <TextView
        android:id="@+id/videorecord_record_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="41dp"
        android:background="@drawable/bg_videorecord_record"
        android:paddingLeft="12dp"
        android:paddingTop="16dp"
        android:paddingRight="12dp"
        android:paddingBottom="16dp"
        android:text="@string/web_rerecord"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/videorecord_commfirm_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="41dp"
        android:background="@drawable/bg_videorecord_commfirm"
        android:paddingLeft="12dp"
        android:paddingTop="16dp"
        android:paddingRight="12dp"
        android:paddingBottom="16dp"
        android:text="@string/sure"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="gone" />
</RelativeLayout>