<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:voiceView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <com.carlos.voiceline.mylibrary.VoiceLineView
        android:id="@+id/dialog_record_vl"
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:visibility="invisible"
        voiceView:lineSpeed="180"
        voiceView:maxVolume="25"
        voiceView:middleLine="@color/yellow_f6"
        voiceView:rectInitHeight="6dp"
        voiceView:rectSpace="2dp"
        voiceView:rectWidth="2dp"
        voiceView:sensibility="four"
        voiceView:viewMode="rect"
        voiceView:voiceLine="@color/yellow_f6" />

    <RelativeLayout
        android:id="@+id/dialog_record_progreess_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:visibility="gone">

        <SeekBar
            android:id="@+id/dialog_record_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="4dp"
            android:progressDrawable="@drawable/bg_record_dialog_progress"
            android:thumb="@drawable/icon_seekbar" />

        <TextView
            android:id="@+id/dialog_record_startduration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_record_progress"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="14dp"
            android:gravity="center_horizontal"
            android:text="00:00"
            android:textColor="@color/gray_93"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/dialog_record_endduration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_record_progress"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3dp"
            android:layout_marginRight="14dp"
            android:gravity="center_horizontal"
            android:text="00:00"

            android:textColor="@color/gray_93"
            android:textSize="12sp" />
    </RelativeLayout>


    <TextView
        android:id="@+id/dialog_record_duration_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/web_maxtime_record"
        android:textColor="@color/gray_93"
        android:textSize="12sp"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:id="@+id/dialog_record_re_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_rerecord" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/web_rerecord"
                android:textColor="@color/gray_93"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/dialog_record_img"
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/icon_startrecord" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/dialog_record_add_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_add_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/web_add_audio"
                    android:textColor="@color/gray_93"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dialog_record_delete_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/icon_delete" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/delete"
                    android:textColor="@color/gray_93"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/dialog_record_status_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="48dp"
        android:text="@string/web_start_record"
        android:textColor="@color/gray_93"
        android:textSize="16sp" />
</LinearLayout>